--- a/pythonanywhere/templates/account.html
+++ b/pythonanywhere/templates/account.html
@@ -423,6 +423,7 @@
 
     <script src="/static/admin.js"></script>
     <script src="/static/custom-alert.js"></script>
+    <script src="/static/js/notifications.js"></script>
 
     <style>
     :root {
