--- a/pythonanywhere/templates/admin.html
+++ b/pythonanywhere/templates/admin.html
@@ -286,6 +286,7 @@
 
     <script src="/static/custom-alert.js"></script>
     <script src="static/admin.js"></script>
+    <script src="/static/js/notifications.js"></script>
       
 </head>
 <body>
