feat: Add password reset functionality with token validation and email notifications

--- a/pythonanywhere/templates/login.html
+++ b/pythonanywhere/templates/login.html
@@ -255,7 +255,7 @@
             
             <button type="submit">Login</button>
         </form>
-        <p>Don't have an account? <a id="signup-link" href="/signup_page">Sign Up</a></p>
+        <p>Don't have an account? <a id="signup-link" href="/signup_page">Sign Up</a> Forgot your password? <a href="/reset-password">Reset your password (requires email)</a></p>
     </div>
 
     <script>
