feat: Implement password reset functionality with undo option and enhance user experience

--- a/pythonanywhere/templates/account.html
+++ b/pythonanywhere/templates/account.html
@@ -482,6 +482,9 @@
                 <input type="password" id="new-password" placeholder="New Password" required>
                 <button type="submit">Update Password</button>
             </form>
+            <form id="update-email-form">
+              <input type="email" id="email-email" placeholder="New email">
+            </form>
         </div>
         <div class="section" id="account-actions">
             <h2>Account Actions</h2>
