--- a/pythonanywhere/templates/reset_password.html
+++ b/pythonanywhere/templates/reset_password.html
@@ -266,8 +266,8 @@
             
             <div id="step2" class="step">
                 <div class="success">✓ Your password has been reset successfully!</div>
-                <p>You can now login with your new password.</p>
-                <button id="login-btn" class="btn">Go to Login</button>
+                <p>You are now automatically logged in, press button below to go to the app</p>
+                <button id="login-btn" class="btn">Go to app</button>
             </div>
         </div>
     </div>
@@ -315,7 +315,7 @@
             
             resetBtn.addEventListener('click', () => resetPassword(token));
             if (loginBtn) {
-                loginBtn.addEventListener('click', () => window.location.href = '/login');
+                loginBtn.addEventListener('click', () => window.location.href = '/index');
             }
             
             async function validateToken() {
