feat: Update email verification redirect and enhance profile picture styling

--- a/pythonanywhere/templates/pws.html
+++ b/pythonanywhere/templates/pws.html
@@ -58,6 +58,8 @@
       font-size: 2em;
       color: #fff;
       cursor: pointer;
+      /* Support transparent profile pictures */
+      background-blend-mode: normal;
     }
     /* Title styling */
     h1 {
