--- a/pythonanywhere/templates/account.html
+++ b/pythonanywhere/templates/account.html
@@ -274,7 +274,7 @@
         }
       
         #modal {
-          background-color: var(--modal-bg);
+          background-color: var(--ctr-color);
           padding: 1.25rem;
           border-radius: var(--border-radius-md);
           text-align: center;
