--- a/pythonanywhere/templates/home.html
+++ b/pythonanywhere/templates/home.html
@@ -7,6 +7,7 @@
   <title>Future Notes | All‑in‑One Productivity Suite</title>
   <meta name="description" content="Future Notes — Organize notes, tasks, calendars & collaborative groups in one integrated, mobile‑friendly app. Get started for free!">
   <meta name="keywords" content="notes app, task manager, calendar integration, collaborative groups, productivity">
+  <meta name="theme-color" content="#121212">
   <link rel="canonical" href="https://bosbes.eu.pythonanywhere.com/">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <meta name="google-site-verification" content="vBSViwn_En_engn8t-u5fGXCxi32UGP8P4NZN2kIuuM" />
