--- a/pythonanywhere/templates/home_dutch.html
+++ b/pythonanywhere/templates/home_dutch.html
@@ -7,6 +7,7 @@
   <title>Future Notes | Alles-in-een productiviteitsapp</title>
   <meta name="description" content="Future Notes — Organiseer notities, taken, agenda's en notitiegroepen in één geïntegreerde, mobielvriendelijke app. Ga nu gratis aan de slag!">
   <meta name="keywords" content="notities app, taak beheerder, agenda, agenda integratie, samenwerkingsgroepen, productiviteit">
+  <meta name="theme-color" content="#121212">
   <link rel="canonical" href="https://bosbes.eu.pythonanywhere.com/">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <meta name="google-site-verification" content="vBSViwn_En_engn8t-u5fGXCxi32UGP8P4NZN2kIuuM" />
